<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>ch.bfh</groupId>
	<artifactId>exercise_oware</artifactId>
	<version>1.0</version>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<maven.compiler.release>11</maven.compiler.release>
		<version.junit>5.5.0</version.junit>
		<version.openjavafx>14</version.openjavafx>
		<mainClass>ch.bfh.oware.ConsoleApp</mainClass>
		<mainClassJavaFX>ch.bfh.oware.JavaFXApp</mainClassJavaFX>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<checkstyle.configLocation>src/etc/checkstyle.xml</checkstyle.configLocation>
	</properties>

	<dependencies>
		<!-- For further JavaFX dependencies, see: https://mvnrepository.com/artifact/org.openjfx/ -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx</artifactId>
			<version>${version.openjavafx}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>${version.openjavafx}</version>
		</dependency>
		<!-- JUnit -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>${version.junit}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<pluginManagement>
			<!-- Use 'mvn versions:display-plugin-updates' to check if newer plugins
				are available -->
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.1.1</version>
				</plugin>
			</plugins>
		</pluginManagement>
		<plugins>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>exec-maven-plugin</artifactId>
				<version>3.0.0</version>
				<executions>
					<execution>
						<goals>
							<goal>java</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<mainClass>${mainClass}</mainClass>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.4</version>
				<configuration>
					<mainClass>${mainClassJavaFX}</mainClass>
					<includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M5</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.1.1</version>
				<configuration>
					<configLocation>${checkstyle.configLocation}</configLocation>
					<encoding>UTF-8</encoding>
					<consoleOutput>true</consoleOutput>
					<failsOnError>true</failsOnError>
					<linkXRef>false</linkXRef>
					<excludes>**/module-info.java</excludes>
				</configuration>
				<executions>
					<execution>
						<id>validate</id>
						<phase>validate</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<additionalJOptions>
						<additionalJOption>-javafx</additionalJOption>
						<additionalJOption>--add-modules=javafx.base,javafx.controls,javafx.graphics</additionalJOption>
					</additionalJOptions>
					<sourcepath>src/main/java</sourcepath>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<!-- <profiles> <profile> <id>javafx</id> <build> <plugins> <plugin> <groupId>org.openjfx</groupId>
		<artifactId>javafx-maven-plugin</artifactId> <version>0.0.4</version> <configuration>
		<mainClass>${mainClass}</mainClass> <includePathExceptionsInClasspath>true</includePathExceptionsInClasspath>
		</configuration> </plugin> </plugins> </build> </profile> </profiles> -->
</project>
